deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraform-project-deployment
spec:
  selector:
    matchLabels:
      app: terraform-project
  replicas: 2
  template:
    metadata:
      labels:
        app: terraform-project
    spec:
      containers:
        - name: terraform-project
          image: gauravxo/terraform-project:latest # Updated image to private DockerHub image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred # Reference to the Docker registry secret
---
apiVersion: v1
kind: Service
metadata:
  name: terraform-project-ssvc
spec:
  selector:
    app: terraform-project
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080 
  type: LoadBalancer
